--- a/haskell/Makefile
+++ b/haskell/Makefile
@@ -1,6 +1,11 @@
 all: test
 
-test: 
-	ghc Test.hs
+test: clean
+	ghc -fhpc Test.hs
 	./Test
+	hpc markup Test
 
+clean:
+	rm -f *.o
+	rm -f *.tix
+	rm -f *.hi
